<resources>
    <string name="app_name">Oh Weather</string>

    <!-- Actions -->
    <string name="action_refresh">Refresh</string>
    <string name="action_download">Download</string>

    <!-- Content Descriptions -->
    <string name="desc_logo">App Logo</string>

    <!-- String Formats -->
    <string name="format_location">%1$s, %2$s</string>
    <string name="format_actual_weather">%1$s · %2$s</string>
    <string name="format_temperature">%s °C</string>
    <string name="format_temperature_min">Temperature Min.: %s °C</string>
    <string name="format_temperature_max">Temperature Max.: %s °C</string>

    <string name="format_wind">Wind: %1$s m\/s, %2$s °C</string>
    <string name="format_cloudiness">Cloudiness: %s</string>
    <string name="format_pressure">Pressure: %s hPa</string>
    <string name="format_humidity">Humidity: %s \%</string>
    <string name="format_geo_coords">Geo Coordinates: [%1$.2f, %2$.2f]</string>

    <!-- Generic error messages -->
    <string name="no_weather_desc">No weather description.</string>
    <string name="no_weather_updates">No weather updates yet.</string>
    <string name="unable_weather_updates">Unable to retrieve the weather updates. Please try again later.</string>
    <string name="unable_weather_detail">Unable to load weather detail. Please try again later.</string>

    <!-- Permissions -->
    <string name="rationale_write_external">This app needs access to your external storage to save weather icons.</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="permission_denied_message">Permission denied</string>

</resources>
