<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/card_item_vertical_margin">

                    <!-- Weather Icon -->
                    <ImageView
                        android:id="@+id/ivWeatherIcon"
                        android:layout_width="@dimen/detail_weather_icon_size"
                        android:layout_height="@dimen/detail_weather_icon_size"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/card_item_horizontal_margin"
                        android:layout_marginRight="@dimen/card_item_horizontal_margin" />

                    <!-- Temperature -->
                    <TextView
                        android:id="@+id/tvTemperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/ivWeatherIcon"
                        android:layout_toRightOf="@+id/ivWeatherIcon"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        tools:text="30 C" />
                </RelativeLayout>

                <!-- Temperature Min. -->
                <TextView
                    android:id="@+id/tvTemperatureMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/card_item_vertical_margin"
                    tools:text="@string/format_temperature_min" />

                <!-- Temperature Max. -->
                <TextView
                    android:id="@+id/tvTemperatureMax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/card_item_vertical_margin"
                    tools:text="@string/format_temperature_max" />

                <!-- Wind -->
                <TextView
                    android:id="@+id/tvWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/card_item_vertical_margin"
                    tools:text="@string/format_wind" />

                <!-- Cloudiness -->
                <TextView
                    android:id="@+id/tvCloudiness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/card_item_vertical_margin"
                    android:text="@string/format_cloudiness" />

                <!-- Pressure -->
                <TextView
                    android:id="@+id/tvPressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/card_item_vertical_margin"
                    android:text="@string/format_pressure" />

                <!-- Humidity -->
                <TextView
                    android:id="@+id/tvHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/card_item_vertical_margin"
                    android:text="@string/format_humidity" />

                <!-- Geo Coordinates -->
                <TextView
                    android:id="@+id/tvGeoCoordinates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/format_geo_coords" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
